--- a/css/portofolio.css
+++ b/css/portofolio.css
@@ -61,3 +61,99 @@
     flex-shrink: var(--flex-shrink);
     border-radius: 4px;
     background: #2196F3;
+}
+
+.web-button {
+    width: 120px;
+    height: 38px;
+    flex-shrink: var(--flex-shrink);
+    color: #212121;
+    text-align: center;
+    font-size: 16px;
+    font-style: var(--font-style);
+    font-weight: var(--font-weight);
+    line-height: 1.6;
+    letter-spacing: 0.48px;
+}
+
+.app-button {
+    width: 83px;
+    height: 38px;
+    flex-shrink: var(--flex-shrink);
+}
+
+.design-button {
+    width: 96px;
+    height: 38px;
+    flex-shrink: var(--flex-shrink);
+}
+
+.marketing-button {
+    width: 121px;
+    height: 38px;
+    flex-shrink: var(--flex-shrink);
+}
+
+.name-section {
+    color: #212121;
+    font-size: 18px;
+    font-style: var(--font-style);
+    font-weight: 700;
+    line-height: 2;
+    letter-spacing: 1.08px;
+}
+
+.category-section {
+    color: #757575;
+    font-size: 16px;
+    font-style: var(--font-style);
+    font-weight: var(--font-weight);
+    line-height: 1.8;
+    letter-spacing: 0.48px;
+    }
+
+    
+.footer-section {
+    background: #2F303A;
+}
+
+.footer-section > .webstudio-link {
+    color: #2196F3;
+    font-size: 26px;
+    font-style: var(--font-style);
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 0.78px;
+}
+
+.footer-section > address {
+    color: #FFF;
+    font-size: 14px;
+    font-style: var(--font-style);
+    font-weight: var(--font-weight);
+    line-height: normal;
+    letter-spacing: 0.42px;
+    display: flex;
+    width: 207px;
+    height: 16px;
+    flex-direction: column;
+    flex-shrink: var(--flex-shrink);
+}
+
+.footer-section > p > a {
+    color: #ffffff99;
+    font-size: 14px;
+    font-style: var(--font-style);
+    font-weight: var(--font-weight);
+    line-height: normal;
+    letter-spacing: 0.42px;
+    display: flex;
+    width: 231px;
+    flex-direction: column;
+    flex-shrink: var(--flex-shrink);
+}
+
+.footer-section > address > .studio-link > .phone-section a:hover,
+.footer-section > address > .studio-link > .phone-section a:focus {
+    color: #af1e88;
+}
