--- a/css/portofolio.css
+++ b/css/portofolio.css
@@ -16,7 +16,7 @@
     color: #2196F3;
     font-size: 26px; 
     font-family: sans-serif;
-    font-style: normal;
+    font-style: var(--font-style);
     font-weight: 700;
     line-height: normal;
     letter-spacing: 2px;
