--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,125 @@
         --flex-shrink: 0;
     }
 
-    .header-section {
-
+    main > h1 {
+    background-color:#2F303A;
+    color: #fff;
+    font-size: 44px;
+    font-family: sans-serif;
+    font-style: var(--font-style);
+    font-weight: 900;
+    line-height: 60px;
+    letter-spacing: 2px;
     }
+
+    main > button {
+      background-color: #2196F3;
+      color:#fff;
+    }
+
+    main > button:hover,
+    main > button:focus
+    main > button:active {
+    cursor: pointer;
+    width: 200px;
+    height: 50px;
+    flex-shrink: var(--flex-shrink);
+    }
+    
+    .div-class> b {
+    color: #212121;
+    font-size: 14px;
+    font-family: sans-serif;
+    font-style: var(--font-style);
+    font-weight: 700;
+    line-height: 16.41px;
+    letter-spacing: 2px;
+    } 
+
+    .div-class > p {
+    color: #757575;
+    font-size: 14px;
+    font-family: sans-serif;
+    font-style: var(--font-style);
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 2px;
+    }
+
+    main > h2 {
+        color: #212121;
+        font-size: 36px;
+        font-family: sans-serif;
+        font-style: var(--font-style);
+        font-weight: 700;
+        line-height: 42.19pxpx;
+        letter-spacing: 2px;  
+        text-align: center;
+    }
+
+    .text-picture > strong {
+    color: #212121;
+    font-size: 16px;
+    font-family: sans-serif;
+    font-style: var(--font-style);
+    font-weight: 500;
+    line-height: 18.75px;
+    letter-spacing: 2px;
+    text-align: center;
+    }
+
+    .text-picture > span {
+    color: #757575;
+    font-size: 16px;
+    font-family: sans-serif;
+    font-style: var(--font-style);
+    font-weight: 400;
+    line-height: 18.75px;
+    letter-spacing: 2px;
+    text-align: center;
+    }
+       
+.footer-section {
+    background: #2F303A;
+}
+
+.footer-section > .webstudio-link {
+    color: #2196F3;
+    font-size: 26px;
+    font-style: var(--font-style);
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 0.78px;
+}
+
+.footer-section > address {
+    color: #FFF;
+    font-size: 14px;
+    font-style: var(--font-style);
+    font-weight: var(--font-weight);
+    line-height: normal;
+    letter-spacing: 0.42px;
+    display: flex;
+    width: 207px;
+    height: 16px;
+    flex-direction: column;
+    flex-shrink: var(--flex-shrink);
+}
+
+.footer-section > p > a {
+    color: #ffffff99;
+    font-size: 14px;
+    font-style: var(--font-style);
+    font-weight: var(--font-weight);
+    line-height: normal;
+    letter-spacing: 0.42px;
+    display: flex;
+    width: 231px;
+    flex-direction: column;
+    flex-shrink: var(--flex-shrink);
+}
+
+.footer-section > address > .studio-link > .phone-section a:hover,
+.footer-section > address > .studio-link > .phone-section a:focus {
+    color: #af1e88;
+}
