--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@
     .text-picture > strong {
     color: #212121;
     font-size: 16px;
-    font-family: sans-serif;
+    font-family: var(--font-family);
     font-style: var(--font-style);
     font-weight: 500;
     line-height: 18.75px;
